[package]
name = "tauri-use"
version = "0.2.0"
description = "Interop tauri api for leptos"
authors = ["Jcskey"]
edition = "2024"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/jcskey/tauri-use"
repository = "https://github.com/jcskey/tauri-use"
categories = ["gui", "web-programming", "wasm"]
keywords = ["leptos", "tauri", "utilities"]

[dependencies]
reactive_graph = { version = "0.2", features = ["effects"] }
send_wrapper = "0.6"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
